# WTHIROMC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: allowlist.rs  commands.rs  history.rs  lib.rs  main.rs  types.rs
src-tauri/src/collector/: mod.rs  persistence.rs  processes.rs  signature.rs
src-tauri/src/explain/: mod.rs  templates.rs
src-tauri/src/rules/: mod.rs  persistence_rules.rs  process_rules.rs
src-tauri/tests/: rule_engine_tests.rs
src/components/: ProcessDetail.tsx  ProcessList.tsx  RiskBadge.tsx  StartupDetail.tsx  StartupList.tsx
src/lib/: export.ts  incidentGuidance.ts
src/types/: explained.ts
